[package]
name = "maps-address-completion-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
human_bytes = "0.4.3"
osmpbfreader = "0.16.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
