[package]
name = "maps-address-completion-service"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/julianbuettner/maps-address-completion-service"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
description = "Serve city names, zip codes, street names and house numbers for auto completion"
license = "MIT"

[[bin]]
name = "macs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
codes-iso-3166 = { version = "0.1.5", features = ["full_name", "local_names"] }
fern = "0.6.2"
human_bytes = "0.4.3"
humantime = "2.1.0"
log = "0.4.20"
lz4_flex = "0.11.1"
osmpbfreader = "0.16.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
